--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,12 @@
     -->
     <title>iPod osm</title>
     <script src="https://kit.fontawesome.com/2d9b67a497.js" crossorigin="anonymous"></script>
+  
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
